# olm-ci-img

./: .gitignore  README.md  docker-compose.pull-test.yml  docker-compose.test.yml  justfile  pyproject.toml
.github/workflows/: ci-cd-pipeline.yml  push.yml  run-linters.yml  run-tests.yml
src/: Dockerfile  entrypoint.sh  models.json
tests/: conftest.py  test_e2e.py  test_unit.py
tests/e2e/: test_docker_compose.py  test_docker_compose_pull.py
